<resources>
    <string name="app_name">UStora</string>
    <string name="login_text">Already a member? <u><b>Login</b></u></string>
    <string name="signUp">No account yet? <u><b>Create one</b></u></string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="logo">Logo</string>
    <string name="create_account">Create Account</string>
    <string name="create_item">Create Item</string>
    <string name="welcome">Welcome!</string>
    <string name="hello">Hello World! I\'m blank fragment</string>
    <string name="sign_out">Sign Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="load_failed">Can\'t fetch data from server</string>
    <string name="post_failed">Can\'t post data to server</string>
    <string name="no_internet">No internet connection</string>
    <string name="check">Please check your email and password</string>
    <string name="email_error">Enter a valid email</string>
    <string name="password_error">At least 8 characters</string>
    <string name="phone_error">Enter a valid phone</string>
    <string name="name_error">Enter a real name, please</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="sign_up_explanation">This email or phone are already registered, please try another</string>
    <string name="dollars">\$</string>
    <string name="place">Place of purchase: %1$s</string>
    <string name="image">image</string>
    <string name="title">Title:  </string>
    <string name="place_holder">Place of purchase: </string>
    <string name="description">Description: </string>
    <string name="price">Price: </string>
    <string name="date">Date: </string>
    <string name="profile">Profile</string>
    <string name="goods">Goods</string>
    <string name="blank">Blank</string>
    <string name="enter_new_email">Enter new email:</string>
    <string name="enter_new_name">Enter new name:</string>
    <string name="profile_image">Profile image</string>
    <string name="upload_new">Upload</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="upload_progress">Upload in progress</string>
    <string name="uploading">Uploading</string>
    <string name="image_success">Image updated</string>
    <string name="email_success">User email address updated.</string>
    <string name="fail">FAILED.</string>
    <string name="confirm_title">Confirm password:</string>
    <string name="confirm">Confirm</string>
    <string name="name_success">Name updated</string>
    <string name="details">Good\'s details</string>
    <string name="new_item">Add new good</string>
    <string name="item_image">Image of the item</string>
    <string name="title_error">Please provide a valid title</string>
    <string name="place_error">Please type in a valid place</string>
    <string name="date_error">This does not look like a date</string>
    <string name="price_error">Please fill in a valid price</string>
    <string name="date_format">%d/%d/%d</string>
</resources>
