<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ItemDetailsActivity">

    <ImageView
        android:id="@+id/img_detailed"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        tools:src="@tools:sample/backgrounds/scenic[0]" />

    <TextView
        android:id="@+id/title_detailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/place_detailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_holder"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/date_detailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/date" />

    <TextView
        android:id="@+id/price_detailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/price" />

</LinearLayout>