<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="ProfileFragment">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/pullToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/profile_image"
                    tools:srcCompat="@tools:sample/avatars[0]" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/new_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mode_edit_black_24dp"
                    android:layout_alignEnd="@+id/image_profile"
                    android:layout_alignParentTop="true" />
            </RelativeLayout>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/username"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/email"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/enter_new_email"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_new1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_new"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/new_email_button"
                    style="@android:style/Widget.Material.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/save"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_new_name"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_new1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_new"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/new_name_button"
                    style="@android:style/Widget.Material.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_margin="7dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/save"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

