<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".NewItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingTop="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/item_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/item_image"
                    android:src="@drawable/default_img"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/new_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mode_edit_black_24dp"
                    android:layout_alignEnd="@+id/item_image"
                    android:layout_alignParentTop="true" />
            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/title_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/input_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/place_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_holder"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/input_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textAutoComplete" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/input_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="text|date" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/input_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_create_item"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:text="@string/create_item" />

        </LinearLayout>

    </ScrollView>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop"
        android:visibility="invisible" />
</RelativeLayout>